bk_ida/gccida/g2/scan_rtx_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/regrename.c:860:41: error: must use 'enum' tag to refer to type 'reg_class'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/regrename.c:860:55: error: must use 'enum' tag to refer to type 'scan_actions'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/regrename.c:860:76: error: must use 'enum' tag to refer to type 'op_type'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                                           ^
                                                                           enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/regrename.c:913:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( ( unsigned int)( mode_class_0[v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/regrename.c:952:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v21 = ( ( unsigned int)( mode_class_0[v26] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scan_rtx_reg/src/obj/regrename.o] Error 1
